--- a/OPNS_Demo_fe/src/app/footer/footer.component.html
+++ b/OPNS_Demo_fe/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <footer class="py-3 my-4 border-top">
-    <div class="col-md-4">
-      <span class="mb-3 mb-md-0 text-muted">© 2022 One Piece NO SPOILER</span>
+    <div>
+      <p class="text-muted">© 2022 One Piece NO SPOILER, puoi acquistare i volumi di One Piece dal rivenditore ufficiale italiano <a href="https://www.starcomics.com/titoli-fumetti/one-piece-new-edition" target="_blank">Star Comics</a>. </p>
     </div>
   </footer>
 </div>
