--- a/OPNS_Demo_fe/src/app/components/home/home.component.scss
+++ b/OPNS_Demo_fe/src/app/components/home/home.component.scss
@@ -1,5 +1,5 @@
 .header{
-    background-image: url(../../assets/img/headerdawnmerry.jpg);
+    background-image: url(../../../assets/img/headerdawnmerry.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
