--- a/OPNS_Demo_fe/src/app/components/home/home.component.html
+++ b/OPNS_Demo_fe/src/app/components/home/home.component.html
@@ -22,8 +22,8 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-3 col-sm-12 pt-5">
-            <div class="card home-card">
-                <img src="../../assets/img/cover/volume1.jpg" class="card-img-top" alt="vol1">
+            <div class="card cover text-bg-light shadow-lg">
+                <img src="../../../assets/img/cover/volume1.jpg" class="card-img-top" alt="vol1">
                 <div class="card-body">
                     <p class="card-text">Copertina del primo volume della
                         New Edition italiana del manga</p>
