--- a/OPNS_Demo_fe/src/app/components/volumi/volumi.component.scss
+++ b/OPNS_Demo_fe/src/app/components/volumi/volumi.component.scss
@@ -1,8 +1,10 @@
 @import '../home/home.component.scss';
-.card{
-    box-shadow: 20rem;
-}
-.cover{
+
+.cover-modal{
    height: 35rem;
-   width: 22rem;
+   width: 25rem;
+}
+
+.loading{
+   height: 500px;
 }
